# codemix-restore

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  claude.md  conftest.py  e2e_test.py  e2e_test_comprehensive.py  e2e_test_expanded.py  e2e_test_fresh.py  e2e_test_robustness.py  e2e_test_unseen.py  install_neural.sh  pyproject.toml  run_predictions.py  run_predictions_sample.py  test_indicxlit.py  test_new_examples.py  test_new_examples_2.py
.github/workflows/: publish.yml
codemix_restore/: __init__.py  abbreviation.py  config.py  confusable_filter.py  dictionary_lookup.py  language_id.py  neural_translit.py  pipeline.py  reconstructor.py  suffix_map.py  tokenizer.py  viterbi_lid.py
codemix_restore/compat/: fairseq_patch.py
codemix_restore/data/: as_common.txt  bn_common.txt  brx_common.txt  doi_common.txt  en_dict_30k.json  gu_common.txt  hi_common.txt  kn_common.txt  kok_common.txt  ks_common.txt  mai_common.txt  ml_common.txt  mni_common.txt  mr_common.txt  ne_common.txt  or_common.txt  pa_common.txt  sa_common.txt  sat_common.txt  sd_common.txt  ta_common.txt  te_common.txt  ur_common.txt
codemix_restore/data/known_transliterations/: as_merged.json  bn_merged.json  brx_merged.json  doi_merged.json  gu_merged.json  hi_merged.json  kn_merged.json  kok_merged.json  ks_merged.json  mai_merged.json  ml_merged.json  mni_merged.json  mr_merged.json  ne_merged.json  or_merged.json  (+7 more)
codemix_restore/phonetic/: __init__.py  engine.py  script_phoneme_maps.py
scripts/: build_dictionary.py  build_native_wordlists.py  extract_native_vocab_from_asr.py  generate_transliterations_batch.py  merge_transliterations.py  resubmit_low_langs.py
tests/: test_config.py  test_dictionary_lookup.py  test_phonetic.py  test_pipeline.py  test_suffix_stripping.py  test_tokenizer.py  test_viterbi_lid.py
